--- a/xmonad-contrib/Makefile
+++ b/xmonad-contrib/Makefile
@@ -1,8 +1,7 @@
 # $NetBSD$
 
-DISTNAME=	xmonad-contrib-0.11
+DISTNAME=	xmonad-contrib-0.11.2
 PKGNAME=	${DISTNAME}
-PKGREVISION=    1
 CATEGORIES=	wm
 
 MAINTAINER=	degroote@NetBSD.org
@@ -14,9 +13,10 @@ LICENSE=	modified-bsd
 .include "options.mk"
 
 .include "../../x11/libXft/buildlink3.mk"
-.include "../../wip/hs-random/buildlink3.mk"
-.include "../../wip/hs-x11/buildlink3.mk"
-.include "../../wip/hs-utf8-string/buildlink3.mk"
-.include "../../wip/xmonad/buildlink3.mk"
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-mtl/buildlink3.mk"
+.include "../../wip/hs-random/buildlink3.mk"
+.include "../../wip/hs-utf8-string/buildlink3.mk"
+.include "../../wip/hs-x11/buildlink3.mk"
+.include "../../wip/xmonad/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
